--- a/public/css/Explore.css
+++ b/public/css/Explore.css
@@ -1681,7 +1681,16 @@ body{
       width: 350px;
       height:450px;
   }
+
+
+  .welcome-message h1{
+    font-size: 16px;
+  }
   
+
+  .welcome-message p{
+    font-size: 12px;
+  }
 
 }
 
