--- a/public/css/adultpro.css
+++ b/public/css/adultpro.css
@@ -2648,6 +2648,7 @@ body{
         left: 0;
         background: white;
         padding: 12px;
+          z-index: 999;
         box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
       
     }
