--- a/public/css/home.css
+++ b/public/css/home.css
@@ -255,7 +255,7 @@ body{
     flex-direction: column; 
     justify-content: space-between; 
     align-items: center;
-    height: 100%;/
+    height: 100%;
 }
 
 .button-container {
