--- a/public/css/bookings.css
+++ b/public/css/bookings.css
@@ -901,6 +901,13 @@ body{
     gap: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
     position: relative;
+      transition: 0.3s ease;
+  }
+
+
+  .pending-session:hover{
+     transform: translateY(-3px);
+    
   }
   
   .session-header {
@@ -993,6 +1000,25 @@ body{
     text-align: right;
   }
   
+
+  .cancel-btn {
+  background-color: transparent;
+  border: 1.5px solid #B22222;
+  color: #B22222;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 3px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.cancel-btn:hover {
+  background-color: #B22222;
+  color: white;
+}
+
+
 
   .noti-dropdown {
     position: absolute;
@@ -1236,4 +1262,113 @@ body{
 
 body{
     margin-bottom: 150px;
+}
+
+
+
+
+
+
+
+/* Call button */
+.call-btn {
+  background: #b22222;
+  border: none;
+  color: #fff;
+  padding: 9px 18px;
+  border-radius: 8px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  box-shadow: 0 3px 8px rgba(178, 34, 34, 0.3);
+}
+
+.call-btn:hover {
+  background: #a11d1d;
+  box-shadow: 0 4px 12px rgba(178, 34, 34, 0.4);
+}
+
+
+
+.loader-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  text-align: center;
+  color: #555;
+}
+
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin-bottom: 10px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+
+.history-session {
+  position: relative;
+  background: #fff;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  padding: 18px;
+  margin-bottom: 20px;
+  transition: 0.3s ease;
+}
+
+.history-session:hover {
+  transform: translateY(-3px);
+}
+
+.delete-history {
+  background: none;
+  border: none;
+  color: #d9534f;
+  cursor: pointer;
+  font-size: 18px;
+  position: absolute;
+  right: 15px;
+  top: 12px;
+  transition: color 0.3s;
+}
+
+
+.status.history {
+  background-color: #e2f7e2;
+  color: #27ae60;
+  padding: 3px 10px;
+  border-radius: 12px;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+
+
+
+.delete-history{
+      background-color: transparent;
+  border: 1.5px solid #B22222;
+  color: #B22222;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 3px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+    
+}
+
+.delete-history:hover {
+  color: #b52b27;
 }
