--- a/public/css/mainRegistration.css
+++ b/public/css/mainRegistration.css
@@ -131,6 +131,7 @@ h2 {
     border: none;
     color: white;
     padding: 10px;
+    width: 30%;
     border-radius: 20px;
     font-size: 1rem;
     transition: background-color 0.3s;
