--- a/public/css/youth.css
+++ b/public/css/youth.css
@@ -186,3 +186,11 @@
   font-size: 0.85em;
   margin-top: 4px;
 }
+
+
+.profile-pic1 {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
